--- a/index.html
+++ b/index.html
@@ -101,30 +101,167 @@
     <!-- ===== ERROR FEATURES ===== -->
     <h2>Error Features</h2>
 
-    <div class="field"><label>Radius Error</label><input type="number" step="any" name="radius_error" required></div>
-    <div class="field"><label>Texture Error</label><input type="number" step="any" name="texture_error" required></div>
-    <div class="field"><label>Perimeter Error</label><input type="number" step="any" name="perimeter_error" required></div>
-    <div class="field"><label>Area Error</label><input type="number" step="any" name="area_error" required></div>
-    <div class="field"><label>Smoothness Error</label><input type="number" step="any" name="smoothness_error" required></div>
-    <div class="field"><label>Compactness Error</label><input type="number" step="any" name="compactness_error" required></div>
-    <div class="field"><label>Concavity Error</label><input type="number" step="any" name="concavity_error" required></div>
-    <div class="field"><label>Concave Points Error</label><input type="number" step="any" name="concave_points_error" required></div>
-    <div class="field"><label>Symmetry Error</label><input type="number" step="any" name="symmetry_error" required></div>
-    <div class="field"><label>Fractal Dimension Error</label><input type="number" step="any" name="fractal_dimension_error" required></div>
+    <div class="field">
+      <label>
+        Radius Error
+        <span class="info" data-tooltip="Standard error of the distance from center to points on the perimeter.">i</span>
+      </label>
+      <input type="number" step="any" name="radius_error" required>
+    </div>
 
-    <!-- ===== WORST FEATURES ===== -->
+    <div class="field">
+      <label>
+        Texture Error
+        <span class="info" data-tooltip="Standard error of gray-scale values.">i</span>
+      </label>
+      <input type="number" step="any" name="texture_error" required>
+    </div>
+
+    <div class="field">
+      <label>
+        Perimeter Error
+        <span class="info" data-tooltip="Standard error of the tumor perimeter size.">i</span>
+      </label>
+      <input type="number" step="any" name="perimeter_error" required>
+    </div>
+
+    <div class="field">
+      <label>
+        Area Error
+        <span class="info" data-tooltip="Standard error of the tumor area.">i</span>
+      </label>
+      <input type="number" step="any" name="area_error" required>
+    </div>
+
+    <div class="field">
+      <label>
+        Smoothness Error
+        <span class="info" data-tooltip="Standard error of local variation in radius lengths.">i</span>
+      </label>
+      <input type="number" step="any" name="smoothness_error" required>
+    </div>
+
+    <div class="field">
+      <label>
+        Compactness Error
+        <span class="info" data-tooltip="Standard error of (perimeter² / area - 1.0).">i</span>
+      </label>
+      <input type="number" step="any" name="compactness_error" required>
+    </div>
+
+    <div class="field">
+      <label>
+        Concavity Error
+        <span class="info" data-tooltip="Standard error of the severity of concave portions.">i</span>
+      </label>
+      <input type="number" step="any" name="concavity_error" required>
+    </div>
+
+    <div class="field">
+      <label>
+        Concave Points Error
+        <span class="info" data-tooltip="Standard error of the number of concave portions.">i</span>
+      </label>
+      <input type="number" step="any" name="concave_points_error" required>
+    </div>
+
+    <div class="field">
+      <label>
+        Symmetry Error
+        <span class="info" data-tooltip="Standard error of the tumor symmetry.">i</span>
+      </label>
+      <input type="number" step="any" name="symmetry_error" required>
+    </div>
+
+    <div class="field">
+      <label>
+        Fractal Dimension Error
+        <span class="info" data-tooltip="Standard error of the 'coastline approximation' - 1.">i</span>
+      </label>
+      <input type="number" step="any" name="fractal_dimension_error" required>
+    </div>
+
     <h2>Worst Features</h2>
 
-    <div class="field"><label>Worst Radius</label><input type="number" step="any" name="worst_radius" required></div>
-    <div class="field"><label>Worst Texture</label><input type="number" step="any" name="worst_texture" required></div>
-    <div class="field"><label>Worst Perimeter</label><input type="number" step="any" name="worst_perimeter" required></div>
-    <div class="field"><label>Worst Area</label><input type="number" step="any" name="worst_area" required></div>
-    <div class="field"><label>Worst Smoothness</label><input type="number" step="any" name="worst_smoothness" required></div>
-    <div class="field"><label>Worst Compactness</label><input type="number" step="any" name="worst_compactness" required></div>
-    <div class="field"><label>Worst Concavity</label><input type="number" step="any" name="worst_concavity" required></div>
-    <div class="field"><label>Worst Concave Points</label><input type="number" step="any" name="worst_concave_points" required></div>
-    <div class="field"><label>Worst Symmetry</label><input type="number" step="any" name="worst_symmetry" required></div>
-    <div class="field"><label>Worst Fractal Dimension</label><input type="number" step="any" name="worst_fractal_dimension" required></div>
+    <div class="field">
+      <label>
+        Worst Radius
+        <span class="info" data-tooltip="The largest (mean of three largest values) tumor radius.">i</span>
+      </label>
+      <input type="number" step="any" name="worst_radius" required>
+    </div>
+
+    <div class="field">
+      <label>
+        Worst Texture
+        <span class="info" data-tooltip="The largest (mean of three largest values) texture value.">i</span>
+      </label>
+      <input type="number" step="any" name="worst_texture" required>
+    </div>
+
+    <div class="field">
+      <label>
+        Worst Perimeter
+        <span class="info" data-tooltip="The largest (mean of three largest values) perimeter value.">i</span>
+      </label>
+      <input type="number" step="any" name="worst_perimeter" required>
+    </div>
+
+    <div class="field">
+      <label>
+        Worst Area
+        <span class="info" data-tooltip="The largest (mean of three largest values) area value.">i</span>
+      </label>
+      <input type="number" step="any" name="worst_area" required>
+    </div>
+
+    <div class="field">
+      <label>
+        Worst Smoothness
+        <span class="info" data-tooltip="The largest (mean of three largest values) smoothness value.">i</span>
+      </label>
+      <input type="number" step="any" name="worst_smoothness" required>
+    </div>
+
+    <div class="field">
+      <label>
+        Worst Compactness
+        <span class="info" data-tooltip="The largest (mean of three largest values) compactness value.">i</span>
+      </label>
+      <input type="number" step="any" name="worst_compactness" required>
+    </div>
+
+    <div class="field">
+      <label>
+        Worst Concavity
+        <span class="info" data-tooltip="The largest (mean of three largest values) concavity value.">i</span>
+      </label>
+      <input type="number" step="any" name="worst_concavity" required>
+    </div>
+
+    <div class="field">
+      <label>
+        Worst Concave Points
+        <span class="info" data-tooltip="The largest (mean of three largest values) concave points value.">i</span>
+      </label>
+      <input type="number" step="any" name="worst_concave_points" required>
+    </div>
+
+    <div class="field">
+      <label>
+        Worst Symmetry
+        <span class="info" data-tooltip="The largest (mean of three largest values) symmetry value.">i</span>
+      </label>
+      <input type="number" step="any" name="worst_symmetry" required>
+    </div>
+
+    <div class="field">
+      <label>
+        Worst Fractal Dimension
+        <span class="info" data-tooltip="The largest (mean of three largest values) fractal dimension value.">i</span>
+      </label>
+      <input type="number" step="any" name="worst_fractal_dimension" required>
+    </div>
 
     <button type="submit" class="btn">Predict Risk</button>
   </form>
