--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@
     Logistic Regression from scratch • Client-side inference
   </p>
 
+  <div class="upload-section">
+    <h2>Bulk Prediction</h2>
+    <div class="field">
+      <label>Upload CSV File (30 features as columns)</label>
+      <input type="file" id="csv-file" accept=".csv">
+    </div>
+    <p class="hint">Ensure columns match the order of Mean, Error, and Worst features.</p>
+  </div>
+
+  <hr style="margin: 40px 0; border-color: rgba(255,255,255,0.1);">
+
   <form id="predict-form" class="grid">
 
     <!-- ===== MEAN FEATURES ===== -->
